# fastapi-clean-arch-template

./: .env.dev.example  .env.example  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: main.py
src/application/: exceptions.py
src/application/interfaces/: __init__.py  unit_of_work.py
src/application/interfaces/auth/: jwks_cache.py
src/application/use_cases/: __init__.py
src/application/use_cases/users/create_user_profile/: dto.py  use_case.py
src/application/use_cases/users/get_user/: dto.py  use_case.py
src/application/use_cases/users/get_user_profile/: dto.py  use_case.py
src/application/use_cases/users/hello_user/: dto.py  use_case.py
src/application/users/hello_user/: dto.py  use_case.py
src/core/settings/: __init__.py  auth.py  cors.py  database.py  rabbit.py  redis.py
src/domain/: exceptions.py
src/domain/entities/: __init__.py
src/domain/entities/user/: repository.py  user.py
src/infrastructure/auth/: auth_service.py  jwks_cache_redis.py  jwks_client.py
src/infrastructure/db/: __init__.py  base.py  engine.py  session.py  unit_of_work.py
src/infrastructure/db/migrations/: env.py
src/infrastructure/db/migrations/versions/: 2026_01_31_1433-b7659898844b_init_schema.py
src/infrastructure/db/models/: __init__.py  user_profile.py
src/infrastructure/db/repositories/: __init__.py  user_profile_repository.py
src/infrastructure/di/: container.py
src/infrastructure/di/providers/: __init__.py  auth.py  config.py  db.py  rabbit.py  redis.py  use_cases.py
src/infrastructure/rabbit/: __init__.py  connection.py  consumer.py  publisher.py
src/infrastructure/redis/: client.py
src/infrastructure/secure/: jwks_client.py
src/presentation/api/: exception_handlers.py
src/presentation/api/dependencies/: auth.py
src/presentation/api/dto/v1/users/: user.py
src/presentation/api/routers/: root.py
src/presentation/api/routers/v1/: auth.py  user.py
