[tool.poetry]
name = "fastapi-clean-arch-template"
version = "0.1.0"
description = "FastAPI Clean Architecture template"
authors = ["LazyFoxx <chernomor987654321@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"

# --- Web ---
fastapi = "^0.124.4"
uvicorn = { extras = ["standard"], version = "^0.38.0" }

# --- Settings / CLI ---
pydantic-settings = "^2.12.0"
typer = "^0.21.1"

# --- Database ---
sqlalchemy = { extras = ["asyncio"], version = "^2.0.45" }
alembic = "^1.17.2"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"

# --- Cache ---
redis = "^7.1.0"

# --- Auth / Security ---
python-jose = { extras = ["cryptography"], version = "^3.5.0" }
passlib = { extras = ["argon2"], version = "^1.7.4" }
authlib = "^1.6.6"
email-validator = "^2.3.0"
python-multipart = "^0.0.21"

# --- DI ---
dishka = { extras = ["fastapi"], version = "^1.7.2" }

# --- HTTP clients ---
httpx = "^0.28.1"
requests = "^2.32.3"   # используется в jwks_client.py
structlog = "^25.5.0"
python-json-logger = "^4.0.0"

[tool.poetry.group.dev.dependencies]
# --- Lint / format ---
ruff = "^0.14.9"
black = "^25.12.0"
mypy = "^1.19.1"

# --- Typing stubs ---
types-requests = "^2.32.4.20260107"

# --- Testing ---
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"

# --- Tooling ---
pre-commit = "^4.5.0"
taskipy = "^1.14.1"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
target-version = "py313"
line-length = 88
select = ["E", "F", "W", "I", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.13"
explicit_package_bases = true
strict = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.taskipy.tasks]
dev = "uvicorn src.main:app --reload"
start = "uvicorn src.main:app --host 0.0.0.0 --port 8000"
tests = "pytest -v --cov=src"
lint = "ruff check src && black --check src && mypy src"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
